--- a/noticias.html
+++ b/noticias.html
@@ -131,7 +131,25 @@
     </div>
 
   </section>
-
+  <footer class="container-fluid fundo-marrom p-4">
+    <div class="container">
+      <div class="row h-100">
+        <div class="col-md-6 col-12 h-100 border-end">
+          <h6>Pró-Reitoria de Cultura</h6>
+          <a href="https://www.instagram.com/culturaufca/" target="_blank"
+            class="btn btn-primary d-flex align-items-center justify-content-center">
+            <i class="bi bi-instagram me-2 mb-2"></i>Instagram
+          </a>
+        </div>
+        <div class="col-md-6 col-12 h-100 mt-3 mt-md-0">
+          <h6>Informações</h6>
+          <p>Website produzido por Antonio Rafael,
+            Ivna Feitosa e Riquelme Jatay.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
 
 
