--- a/noticias.html
+++ b/noticias.html
@@ -26,7 +26,7 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <div class="navbar-nav">
-          <a href="#apresentacao" class="nav-link verde">Apresentação</a>
+          <a href="homepage.html#apresentacao" class="nav-link verde">Apresentação</a>
           <a href="iniciativas.html" class="nav-link amarelo">Iniciativas</a>
           <a href="noticias.html" class="nav-link azul">Notícias</a>
           <div class="dropdown">
@@ -53,7 +53,7 @@
       </div>
     </div>
   </nav>
-  <section class="container mt-5 mb-5 ">
+  <section class="container mt-5 mb-5 fundo-azul">
   <h1 class="mb-4 col d-flex justify-content-start">Informes</h1>
 
   <div class="   d-flex justify-content-around  flex-row row ">
