--- a/noticias.html
+++ b/noticias.html
@@ -53,11 +53,9 @@
       </div>
     </div>
   </nav>
-  <section class="container mt-5 mb-5 fundo-azul">
-  <h1 class="mb-4 col d-flex justify-content-start">Informes</h1>
-
-  <div class="   d-flex justify-content-around  flex-row row ">
-
+  <section class="container-fluid fundo-azul p-4">
+    <h1 class="ml-5  mb-4 col d-flex justify-content-start">Informes</h1>
+  <div class=" container d-flex justify-content-around">
       <div class="d-flex flex-row row  col-xs-12 justify-content-center  ">
           <div class="card mr-3 mt-4" style="width: 18rem;">
             <img class="card-img-top h-50" src="img/card1.jpeg" alt="Card image cap">
@@ -81,10 +79,10 @@
               <h5 class="card-title">Procult/UFCA abre inscrições para cursos presenciais do Núcleo de Idiomas</h5>
               <p class="card-text text-secondary">Publicado em 05/09/2023. Atualizado em 05/09/2023 às 16h56</p>
               <a href="https://www.ufca.edu.br/informes/procult-divulga-abertura-de-inscricoes-para-cursos-presenciais-do-nucleo-de-idiomas/" target="_blank" class="btn btn-primary">Saiba mais </a>
-            </div>
-          </div>       
+            </div>  
 
       </div>
+    </div>
       <div class="col col-xs-12 ">
           <div class="mt-3">
               <div class="card">
