--- a/iniciativas.html
+++ b/iniciativas.html
@@ -20,31 +20,31 @@
       <a href="homepage.html" class="navbar-brand ">
         <img src="img/logoProcult.png" height="34.1" width="172.2" />
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <button class="navbar-toggler btn-light fundo-marrom" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarNav">Menu</button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <div class="navbar-nav">
           <a href="homepage.html#apresentacao" class="nav-link verde">Apresentação</a>
           <a href="iniciativas.html" class="nav-link amarelo">Iniciativas</a>
           <a href="noticias.html" class="nav-link azul">Notícias</a>
           <div class="dropdown">
-            <a href="#" class="nav-link dropdown-toggle verde" data-bs-toggle="dropdown">Outros</a>
+            <a href="#" class="nav-link dropdown-toggle laranja" data-bs-toggle="dropdown">Outros</a>
             <ul class="dropdown-menu">
               <li>
-                <a href="#" class="dropdown-item">Agenda</a>
+                <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/agenda/"
+                  class="dropdown-item" target="_blank">Agenda</a>
               </li>
               <li>
-                <a href="#" class="dropdown-item">Documentos</a>
+                <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/#tab-3"
+                  class="dropdown-item" target="_blank">Contatos</a>
               </li>
               <li>
-                <a href="#" class="dropdown-item">Editais</a>
+                <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/#tab-2"
+                  class="dropdown-item" target="_blank">Serviços</a>
               </li>
               <li>
-                <a href="#" class="dropdown-item">Perguntas Frequentes</a>
-              </li>
-              <li>
-                <a href="#" class="dropdown-item">Relatórios</a>
+                <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/#tab-4"
+                  class="dropdown-item" target="_blank">Organograma</a>
               </li>
             </ul>
           </div>
