--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Procult/UFCA</title>
+  <link rel="shortcut icon" type="imagex/svg" href="img/imgProcult.svg">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -15,25 +17,24 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="teste.html">
+  
 </head>
 
 <body>
   <nav class="navbar fundo-marrom navbar-expand-sm">
     <div class="container d-flex justify-content-around">
-      <a href="homepage.html" class="navbar-brand ">
+      <a href="index.html" class="navbar-brand ">
         <img src="img/logoProcult.png" height="34.1" width="172.2" />
       </a>
       <button class="navbar-toggler btn-light fundo-marrom" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarNav">Menu</button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <div class="navbar-nav">
-          <a href="homepage.html#apresentacao" class="nav-link verde">Apresentação</a>
+          <a href="index.html" class="nav-link verde">Apresentação</a>
           <a href="iniciativas.html" class="nav-link amarelo">Iniciativas</a>
           <a href="noticias.html" class="nav-link azul">Notícias</a>
           <div class="dropdown">
-            <a href="#" class="nav-link dropdown-toggle branco" data-bs-toggle="dropdown">Outros</a>
+            <a href="#" class="nav-link dropdown-toggle verde" data-bs-toggle="dropdown">Outros</a>
             <ul class="dropdown-menu">
               <li>
                 <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/agenda/"
@@ -57,80 +58,77 @@
       </div>
     </div>
   </nav>
-  <section>
-    <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="img/first.svg" alt="First slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/second.svg" alt="Second slide">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="img/third.svg" alt="Third slide">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon color" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-  </section>
-  <section class="container-fluid p-4" id="acesso-rapido" style="color: #121212;">
-    <div class="container">
-      <h1 class="mb-4">Acesso Rápido</h1>
-      <div class="container w-100">
-        <div class="row">
-          <div class="col-md-12 col-12">
-            <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/agenda/"
-              target="_blank" class="btn fundo-laranja w-100 mb-2">Agenda</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-12">
-            <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/documentos/"
-              target="_blank" class="btn fundo-laranja w-100 mb-2">Documentos</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-12">
-            <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/selecao-de-bolsistas/"
-              target="_blank" class="btn fundo-laranja w-100 mb-2">Editais</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-12">
-            <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/perguntas-frequentes/"
-              target="_blank" class="btn fundo-laranja w-100 mb-2">Perguntas Frequentes</a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 col-12">
-            <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/relatorios/"
-              target="_blank" class="btn fundo-laranja w-100">Relatórios</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  </div>
   <main>
-    <section id="apresentacao" class="container-fluid fundo-verde p-4">
+    <section >
+      <div id="carouselExampleIndicators" class="carousel slide  " data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="img/first.svg" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/second.svg" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="img/third.svg" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon color" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </section>
+    <section class="container-fluid pt-5 mt-5 mb-5 pb-5"  id="acesso-rapido" style="color: #121212;">
       <div class="container">
+        <h1 class="mb-4">Acesso Rápido</h1>
+        <div class="container w-100">
+          <div class="row">
+            <div class="col-md-12 col-12">
+              <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/agenda/"
+                target="_blank" class="btn fundo-laranja w-100 mb-2">Agenda</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 col-12">
+              <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/documentos/"
+                target="_blank" class="btn fundo-laranja w-100 mb-2">Documentos</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 col-12">
+              <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/selecao-de-bolsistas/"
+                target="_blank" class="btn fundo-laranja w-100 mb-2">Editais</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 col-12">
+              <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/perguntas-frequentes/"
+                target="_blank" class="btn fundo-laranja w-100 mb-2">Perguntas Frequentes</a>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12 col-12">
+              <a href="https://www.ufca.edu.br/instituicao/administrativo/estrutura-organizacional/pro-reitorias/procult/relatorios/"
+                target="_blank" class="btn fundo-laranja w-100">Relatórios</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="apresentacao" class="container-fluid fundo-verde mt-5 p-5">
+      <div class="container pt-5 pb-5">
         <div class="row">
           <div class="col-12 col-md-8">
-            <h1>Sobre a Procult/UFCA</h1>
-
-            <body>
+            <h1 class="mb-3">Sobre a Procult/UFCA</h1>
               <p> A Pró-Reitoria de Cultura (Procult/UFCA) foi concebida como um setor que trama a Cultura numa dimensão
                 estratégica e formadora da comunidade acadêmica, com a perspectiva de contribuir para a formação
                 integral do estudante universitário e da comunidade favorecida pela Instituição. A Procult/UFCA parte do
@@ -150,8 +148,8 @@
       </div>
   </main>
 
-  <footer class="container-fluid fundo-marrom p-4">
-    <div class="container">
+  <footer class="container-fluid fundo-marrom pt-5 pb-5">
+    <div class="container pt-5 pb-5">
       <div class="row h-100">
         <div class="col-md-6 col-12 h-100 border-end">
           <h6>Pró-Reitoria de Cultura</h6>
@@ -162,8 +160,11 @@
         </div>
         <div class="col-md-6 col-12 h-100 mt-3 mt-md-0">
           <h6>Informações</h6>
-          <p>Website produzido por Antonio Rafael,
-            Ivna Feitosa e Riquelme Jatay.</p>
+          <p>Website produzido por 
+            <a href="https://www.linkedin.com/in/antonio-rafael-oliveira-da-cunha-2a104729a/" target="_blank" >Antonio Rafael</a>,
+            <a href="https://www.linkedin.com/in/ivnafeitosadev/" target="_blank"  >Ivna Feitosa</a> e 
+            <a href="https://www.linkedin.com/in/riquelmejatay/" target="_blank" >Riquelme Jatay</a>
+          </p>
           <p>Todos os direitos reservados.</p>
         </div>
       </div>
