--- a/noticias.html
+++ b/noticias.html
@@ -1,24 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Procult/UFCA</title>
-
+  <link rel="shortcut icon" type="imagex/svg" href="img/imgProcult.svg">
+  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
-     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
 </head>
 
 <body>
   <nav class="navbar fundo-marrom navbar-expand-sm">
     <div class="container d-flex justify-content-around">
-      <a href="homepage.html" class="navbar-brand ">
+      <a href="index.html" class="navbar-brand ">
         <img src="img/logoProcult.png" height="34.1" width="172.2" />
       </a>
       <button class="navbar-toggler fundo-marrom" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -26,8 +28,8 @@
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <div class="navbar-nav">
-          <a href="#apresentacao" class="nav-link verde">Apresentação</a>
-          <a href="iniciativas.html" class="nav-link amarelo">Iniciativas</a>
+          <a href="index.html" class="nav-link verde">Apresentação</a>
+          <a href="iniciativas.html" class="nav-link amarelo">Iniciativa</a>
           <a href="noticias.html" class="nav-link azul">Notícias</a>
           <div class="dropdown">
             <a href="#" class="nav-link dropdown-toggle verde" data-bs-toggle="dropdown">Outros</a>
@@ -140,5 +142,28 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 </body>
+
+<footer class="container-fluid fundo-marrom pt-5 pb-5">
+  <div class="container pt-5 pb-5">
+    <div class="row h-100">
+      <div class="col-md-6 col-12 h-100 border-end">
+        <h6>Pró-Reitoria de Cultura</h6>
+        <a href="https://www.instagram.com/culturaufca/" target="_blank"
+        class="btn btn-primary d-flex align-items-center justify-content-center ">
+        <i class="bi bi-instagram me-2 mb-2 mr-2"></i>Instagram
+      </a>
+      </div>
+      <div class="col-md-6 col-12 h-100 mt-3 mt-md-0">
+        <h6>Informações</h6>
+        <p>Website produzido por 
+          <a href="https://www.linkedin.com/in/antonio-rafael-oliveira-da-cunha-2a104729a/" target="_blank" >Antonio Rafael</a>,
+          <a href="https://www.linkedin.com/in/ivnafeitosadev/" target="_blank"  >Ivna Feitosa</a> e 
+          <a href="https://www.linkedin.com/in/riquelmejatay/" target="_blank" >Riquelme Jatay</a>
+        </p>
+        <p>Todos os direitos reservados.</p>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </html>
