updating container's noticias

--- a/iniciativas.html
+++ b/iniciativas.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
     rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -130,53 +130,35 @@
       </div>
     </section>
   </main>
-  <footer class="container-fluid fundo-marrom p-4">
-    <div class="container">
+  <footer class="container-fluid fundo-marrom pt-5 pb-5">
+    <div class="container pt-5 pb-5">
       <div class="row h-100">
         <div class="col-md-6 col-12 h-100 border-end">
           <h6>Pró-Reitoria de Cultura</h6>
           <a href="https://www.instagram.com/culturaufca/" target="_blank"
-            class="btn btn-primary d-flex align-items-center justify-content-center">
-            <i class="bi bi-instagram me-2 mb-2"></i>Instagram
-          </a>
+          class="btn btn-primary d-flex align-items-center justify-content-center">
+          <i class="bi bi-instagram me-2 mb-2"></i>Instagram
+        </a>
         </div>
         <div class="col-md-6 col-12 h-100 mt-3 mt-md-0">
           <h6>Informações</h6>
-          <p>Website produzido por Antonio Rafael,
-            Ivna Feitosa e Riquelme Jatay.</p>
+          <p>Website produzido por 
+            <a href="https://www.linkedin.com/in/antonio-rafael-oliveira-da-cunha-2a104729a/" target="_blank" >Antonio Rafael</a>,
+            <a href="https://www.linkedin.com/in/ivnafeitosadev/" target="_blank"  >Ivna Feitosa</a> e 
+            <a href="https://www.linkedin.com/in/riquelmejatay/" target="_blank" >Riquelme Jatay</a>
+          </p>
           <p>Todos os direitos reservados.</p>
         </div>
       </div>
     </div>
   </footer>
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 </body>
 
 
-<footer class="container-fluid fundo-marrom pt-5 pb-5">
-  <div class="container pt-5 pb-5">
-    <div class="row h-100">
-      <div class="col-md-6 col-12 h-100 border-end">
-        <h6>Pró-Reitoria de Cultura</h6>
-        <a href="https://www.instagram.com/culturaufca/" target="_blank"
-        class="btn btn-primary d-flex align-items-center justify-content-center">
-        <i class="bi bi-instagram me-2 mb-2"></i>Instagram
-      </a>
-      </div>
-      <div class="col-md-6 col-12 h-100 mt-3 mt-md-0">
-        <h6>Informações</h6>
-        <p>Website produzido por 
-          <a href="https://www.linkedin.com/in/antonio-rafael-oliveira-da-cunha-2a104729a/" target="_blank" >Antonio Rafael</a>,
-          <a href="https://www.linkedin.com/in/ivnafeitosadev/" target="_blank"  >Ivna Feitosa</a> e 
-          <a href="https://www.linkedin.com/in/riquelmejatay/" target="_blank" >Riquelme Jatay</a>
-        </p>
-        <p>Todos os direitos reservados.</p>
-      </div>
-    </div>
-  </div>
-</footer>
 
 </html>
 
