--- a/noticias.html
+++ b/noticias.html
@@ -58,9 +58,9 @@
       </div>
     </div>
   </nav>
-  <section class="container-fluid fundo-azul p-4">
+  <section class="container p-4">
     <h1 class="ml-5  mb-4 col d-flex justify-content-start">Informes</h1>
-  <div class=" container d-flex justify-content-around">
+  <div class="  d-flex justify-content-around row">
       <div class="d-flex flex-row row  col-xs-12 justify-content-center  ">
           <div class="card mr-3 mt-4" style="width: 18rem;">
             <img class="card-img-top h-50" src="img/card1.jpeg" alt="Card image cap">
